--- a/readme.html
+++ b/readme.html
@@ -175,6 +175,19 @@
 <li><a href="https://alex-free.github.io/tonyhax-international">Tonyhax International</a></li>
 </ul>
 <h2 id="downloads">Downloads</h2>
+<h3 id="version-1.0.1-1182022">Version 1.0.1 (11/8/2022)</h3>
+<ul>
+<li><a href="https://github.com/alex-free/aprip/releases/download/v1.0.1/aprip-1.0.1-windows_x86.zip">aprip-1.0.1-windows-x86</a> <em>For Windows 95 OSR 2.5 Or Newer (32-bit Windows)</em></li>
+<li><a href="https://github.com/alex-free/aprip/releases/download/v1.0.1/aprip-1.0.1-windows_x86_64.zip">aprip-1.0.1-windows-x86_64</a> <em>For 64-bit Windows</em></li>
+<li><a href="https://github.com/alex-free/aprip/releases/download/v1.0.1/aprip-1.0.1-linux_x86_static.zip">aprip-1.0.1-linux-x86</a> <em>For x86 Linux Distros</em></li>
+<li><a href="https://github.com/alex-free/aprip/releases/download/v1.0.1/aprip-1.0-linux_x86_64_static.zip">aprip-1.0.1-linux-x86_64</a> <em>For x86_64 Linux Distros</em></li>
+<li><a href="https://github.com/alex-free/aprip/archive/refs/tags/v1.0.1.zip">aprip-1.0.1-source</a></li>
+</ul>
+<p>Changes:</p>
+<ul>
+<li><p>Limited file size max for bin patch mode to 750MB (sanity check, no actual PSX software is even close to this).</p></li>
+<li><p>Added info on DuckStation 8 MB RAM setting (must be left unchecked). APrip also warns you if you try to give it an 8MB RAM dump now after the filesize mismatch error explaining what happened.</p></li>
+</ul>
 <h3 id="version-1.0-1142022">Version 1.0 (11/4/2022)</h3>
 <ul>
 <li><a href="https://github.com/alex-free/aprip/releases/download/v1.0/aprip-1.0-windows_x86.zip">aprip-1.0-windows-x86</a> <em>For Windows 95 OSR 2.5 Or Newer (32-bit Windows)</em></li>
@@ -210,6 +223,10 @@
 <p>You’ll need the download the <a href="https://github.com/stenzek/duckstation/releases">DuckStation</a> emulator. Start the emulator and navigate to the <code>Advanced</code> Settings pane. Change your settings pane so it looks like this image below:</p>
 <figure>
 <img src="images/duckstation-settings.png" alt="Duckstation settings" /><figcaption aria-hidden="true">Duckstation settings</figcaption>
+</figure>
+<p>Also, ensure that the <em>Enable 8MB RAM</em> option is <strong>left untouched</strong> as shown in the image below:</p>
+<figure>
+<img src="images/duckstation-ram-settings.png" alt="Duckstation RAM settings" /><figcaption aria-hidden="true">Duckstation RAM settings</figcaption>
 </figure>
 <p>Now you can generate some GameShark codes with APrip:</p>
 <ul>
